# praxis

./: .gitignore
20090724_monty/: altmonty.hs  monty.c  monty.hs  monty.r
20091211_select/: select.hs
20120727_minstack/: minstack.hs
20121012_bdayParadox/: paradox.hs
20121030_pandigital/: pandigital.hs
20121109_taxicab/: .exrc  taxicab.hs
20121126_unionintersection/: ui.hs  ui.out
20121127_amazon/: amazon.hs
20130308_knight/: knight.hs
20130526_stocks/: stockpairthing.hs
20130626_swaplistnodes/: swap.hs
20130802_orderedht/: HashTable.hs
20130925_kwic/: Kwic.hs  OrderedLines.txt
20141111_color/: FavoriteColor.hs
20150120_forwarddiff/: ForwardDifference.hs
20150227_currency/: cabal.sandbox.config  x20150227-currency.cabal
20150227_currency/src-exec/: Main.hs
20150227_currency/src-lib/: Currency.hs
20150303_power/: Power.hs
20150310_matches/: Matches.hs
20150317_common/: Common.hs  cabal.sandbox.config  common.ijs  x20150317-common.cabal
20150522_stringreplace/: Main.hs  core.tmp
20150713_streamcipher/: Cipher.hs
20150714_orderedwords/: Ordered.hs
20151218_repeated/: Foo.hs
20160123_entropy/: Entropy  Entropy.hs
20180514_tally/: Tally.hs
20180515_embedded/: Number.hs
20180522_floyd/: Floyd.hs
20180525_pearson/: Hash.hs
20180529_blockchain/: Blockchain.hs
20180601_exercise/: Exercise.hs
20180608_overlap/: Overlap.hs
20180615_uncouple/: Uncouple.hs
20180622_dice/: Roller.hs
20180622_popcount/: Next.hs
20180627_clock/: Clock.hs
20180629_length/: Length.hs
20180705_estimate_pi/: Pi.hs
(+3 files in other folders)
